--- a/main.ui
+++ b/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>471</width>
-    <height>607</height>
+    <width>902</width>
+    <height>472</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <x>0</x>
       <y>0</y>
       <width>461</width>
-      <height>551</height>
+      <height>421</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -81,7 +81,7 @@
         <widget class="QLineEdit" name="varNamer">
          <property name="maximumSize">
           <size>
-           <width>150</width>
+           <width>100</width>
            <height>16777215</height>
           </size>
          </property>
@@ -123,7 +123,7 @@
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>100</height>
+         <height>50</height>
         </size>
        </property>
        <property name="sizeIncrement">
@@ -142,8 +142,8 @@
         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="placeholderText">
         <string>Variable Info</string>
@@ -168,8 +168,14 @@ p, li { white-space: pre-wrap; }
            <x>0</x>
            <y>0</y>
            <width>451</width>
-           <height>221</height>
+           <height>146</height>
           </rect>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>150</height>
+          </size>
          </property>
          <property name="sizeIncrement">
           <size>
@@ -195,7 +201,7 @@ p, li { white-space: pre-wrap; }
            <x>0</x>
            <y>0</y>
            <width>451</width>
-           <height>221</height>
+           <height>151</height>
           </rect>
          </property>
          <property name="sizeIncrement">
@@ -214,8 +220,8 @@ p, li { white-space: pre-wrap; }
           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="placeholderText">
           <string>No Equation Provided</string>
@@ -235,7 +241,7 @@ p, li { white-space: pre-wrap; }
            <x>0</x>
            <y>0</y>
            <width>451</width>
-           <height>221</height>
+           <height>151</height>
           </rect>
          </property>
          <property name="sizeIncrement">
@@ -256,14 +262,24 @@ p, li { white-space: pre-wrap; }
      </item>
     </layout>
    </widget>
+   <widget class="QWidget" name="svgBox" native="true">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>40</y>
+      <width>201</width>
+      <height>171</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>471</width>
-     <height>30</height>
+     <width>902</width>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -277,6 +293,8 @@ p, li { white-space: pre-wrap; }
     <addaction name="exportLatex"/>
     <addaction name="exportMathML"/>
     <addaction name="exportMathmatica"/>
+    <addaction name="separator"/>
+    <addaction name="resetButton"/>
    </widget>
    <widget class="QMenu" name="menuOptions">
     <property name="title">
@@ -286,6 +304,7 @@ p, li { white-space: pre-wrap; }
     <addaction name="useVarNamesInSolution"/>
     <addaction name="rememberVarNames"/>
     <addaction name="dontSimplify"/>
+    <addaction name="doEval"/>
     <addaction name="prettySolution"/>
     <addaction name="printSolution"/>
    </widget>
@@ -429,6 +448,19 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="text">
     <string>Regular print Solution</string>
+   </property>
+  </action>
+  <action name="resetButton">
+   <property name="text">
+    <string>Reset Everything</string>
+   </property>
+  </action>
+  <action name="doEval">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Evaluate Non-Symbolically</string>
    </property>
   </action>
  </widget>
