--- a/main.ui
+++ b/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>902</width>
-    <height>472</height>
+    <width>648</width>
+    <height>694</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>461</width>
-      <height>421</height>
+      <width>641</width>
+      <height>641</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -32,36 +32,72 @@
       </widget>
      </item>
      <item>
-      <widget class="QPlainTextEdit" name="equationInput">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>60</height>
-        </size>
-       </property>
-       <property name="sizeIncrement">
-        <size>
-         <width>0</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="baseSize">
-        <size>
-         <width>0</width>
-         <height>40</height>
-        </size>
-       </property>
-       <property name="toolTip">
-        <string>The equation to be evaluated</string>
-       </property>
-       <property name="placeholderText">
-        <string>Enter Text</string>
+      <layout class="QVBoxLayout" name="verticalLayout_6">
+       <item>
+        <widget class="QPlainTextEdit" name="equationInput">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>200</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="sizeIncrement">
+          <size>
+           <width>0</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="baseSize">
+          <size>
+           <width>0</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="toolTip">
+          <string>The equation to be evaluated</string>
+         </property>
+         <property name="placeholderText">
+          <string>Enter Text</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="equationPng">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>70</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="scaledContents">
+          <bool>false</bool>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QPushButton" name="solveButton">
+       <property name="text">
+        <string>Solve!</string>
        </property>
       </widget>
      </item>
@@ -73,12 +109,22 @@
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="variableSelector"/>
+      <widget class="QComboBox" name="variableSelector">
+       <property name="placeholderText">
+        <string>Variables</string>
+       </property>
+      </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLineEdit" name="varNamer">
+         <property name="minimumSize">
+          <size>
+           <width>135</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="maximumSize">
           <size>
            <width>100</width>
@@ -104,17 +150,40 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="varSetter">
-         <property name="sizeIncrement">
-          <size>
-           <width>0</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="placeholderText">
-          <string>Variable Value</string>
-         </property>
-        </widget>
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
+          <widget class="QLineEdit" name="varSetter">
+           <property name="sizeIncrement">
+            <size>
+             <width>0</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="placeholderText">
+            <string>Variable Value</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="varPng">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>70</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="scaledContents">
+            <bool>false</bool>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </item>
@@ -162,33 +231,64 @@ p, li { white-space: pre-wrap; }
         <attribute name="title">
          <string>Solution</string>
         </attribute>
-        <widget class="QTextBrowser" name="answerBox">
+        <widget class="QWidget" name="verticalLayoutWidget_3">
          <property name="geometry">
           <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>451</width>
-           <height>146</height>
+           <x>-1</x>
+           <y>-5</y>
+           <width>631</width>
+           <height>173</height>
           </rect>
          </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>150</height>
-          </size>
-         </property>
-         <property name="sizeIncrement">
-          <size>
-           <width>0</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="placeholderText">
-          <string>No Equation Provided</string>
-         </property>
-         <property name="openLinks">
-          <bool>false</bool>
-         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <item>
+           <widget class="QLabel" name="solutionPng">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>100</height>
+             </size>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="scaledContents">
+             <bool>false</bool>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QTextBrowser" name="answerBox">
+            <property name="minimumSize">
+             <size>
+              <width>150</width>
+              <height>59</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>9999999</width>
+              <height>150</height>
+             </size>
+            </property>
+            <property name="sizeIncrement">
+             <size>
+              <width>0</width>
+              <height>30</height>
+             </size>
+            </property>
+            <property name="placeholderText">
+             <string>No Equation Provided</string>
+            </property>
+            <property name="openLinks">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </widget>
        <widget class="QWidget" name="codeTab">
@@ -200,8 +300,8 @@ p, li { white-space: pre-wrap; }
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>451</width>
-           <height>151</height>
+           <width>631</width>
+           <height>161</height>
           </rect>
          </property>
          <property name="sizeIncrement">
@@ -240,8 +340,8 @@ p, li { white-space: pre-wrap; }
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>451</width>
-           <height>151</height>
+           <width>631</width>
+           <height>161</height>
           </rect>
          </property>
          <property name="sizeIncrement">
@@ -262,23 +362,13 @@ p, li { white-space: pre-wrap; }
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="svgBox" native="true">
-    <property name="geometry">
-     <rect>
-      <x>480</x>
-      <y>0</y>
-      <width>411</width>
-      <height>401</height>
-     </rect>
-    </property>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>902</width>
+     <width>648</width>
      <height>30</height>
     </rect>
    </property>
@@ -301,12 +391,8 @@ p, li { white-space: pre-wrap; }
      <string>Options</string>
     </property>
     <addaction name="throwError"/>
-    <addaction name="useVarNamesInSolution"/>
     <addaction name="rememberVarNames"/>
-    <addaction name="dontSimplify"/>
     <addaction name="doEval"/>
-    <addaction name="prettySolution"/>
-    <addaction name="printSolution"/>
    </widget>
    <widget class="QMenu" name="menuTools">
     <property name="title">
@@ -314,6 +400,7 @@ p, li { white-space: pre-wrap; }
     </property>
     <addaction name="plotButton"/>
     <addaction name="limitButton"/>
+    <addaction name="solveButton2"/>
    </widget>
    <widget class="QMenu" name="menuMath">
     <property name="title">
@@ -322,7 +409,20 @@ p, li { white-space: pre-wrap; }
     <addaction name="getIntegralButton"/>
     <addaction name="getDiffButton"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="useVarNamesInSolution"/>
+    <addaction name="dontSimplify"/>
+    <addaction name="printSolution"/>
+    <addaction name="prettySolution"/>
+    <addaction name="separator"/>
+    <addaction name="previewSolution"/>
+    <addaction name="previewCurVar"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuView"/>
    <addaction name="menuOptions"/>
    <addaction name="menuTools"/>
    <addaction name="menuMath"/>
@@ -421,7 +521,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>Prettify the Solution</string>
@@ -461,6 +561,21 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="text">
     <string>Evaluate Non-Symbolically</string>
+   </property>
+  </action>
+  <action name="previewSolution">
+   <property name="text">
+    <string>Preview Solution</string>
+   </property>
+  </action>
+  <action name="previewCurVar">
+   <property name="text">
+    <string>Preview Current Variable</string>
+   </property>
+  </action>
+  <action name="solveButton2">
+   <property name="text">
+    <string>Solve</string>
    </property>
   </action>
  </widget>
