--- a/limitsInput.ui
+++ b/limitsInput.ui
@@ -7,20 +7,29 @@
     <x>0</x>
     <y>0</y>
     <width>385</width>
-    <height>177</height>
+    <height>245</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="sizeGripEnabled">
+   <bool>false</bool>
+  </property>
+  <property name="modal">
+   <bool>true</bool>
+  </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>130</y>
+     <y>200</y>
      <width>341</width>
      <height>32</height>
     </rect>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::TabFocus</enum>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
@@ -77,7 +86,77 @@
     <string>(Use &quot;oo&quot; for infinity)</string>
    </property>
   </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>130</y>
+     <width>176</width>
+     <height>59</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QRadioButton" name="addMainEquation">
+      <property name="text">
+       <string>Add to main equation</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="addCurVar">
+      <property name="text">
+       <string>Add to selected variable</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QRadioButton" name="useMinus">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>160</y>
+     <width>36</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>-</string>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="usePlus">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>130</y>
+     <width>36</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>+</string>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+  </widget>
  </widget>
+ <tabstops>
+  <tabstop>limitVar</tabstop>
+  <tabstop>limitVal</tabstop>
+  <tabstop>buttonBox</tabstop>
+  <tabstop>usePlus</tabstop>
+  <tabstop>useMinus</tabstop>
+  <tabstop>addMainEquation</tabstop>
+  <tabstop>addCurVar</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
@@ -87,12 +166,12 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
+     <x>238</x>
+     <y>214</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
-     <y>274</y>
+     <y>244</y>
     </hint>
    </hints>
   </connection>
@@ -103,12 +182,12 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
+     <x>306</x>
+     <y>220</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
-     <y>274</y>
+     <y>244</y>
     </hint>
    </hints>
   </connection>
