--- a/diffIntegral.ui
+++ b/diffIntegral.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>499</width>
-    <height>442</height>
+    <width>385</width>
+    <height>245</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="sizeGripEnabled">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
   <property name="modal">
    <bool>true</bool>
@@ -22,8 +22,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>400</y>
+     <x>20</x>
+     <y>200</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -41,69 +41,60 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QTableWidget" name="table">
+  <widget class="QWidget" name="formLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>491</width>
-     <height>311</height>
+     <x>20</x>
+     <y>10</y>
+     <width>351</width>
+     <height>81</height>
     </rect>
    </property>
-   <property name="showGrid">
-    <bool>true</bool>
+   <layout class="QFormLayout" name="formLayout">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Variable to get:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="var"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Spare Box:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="_spare">
+      <property name="text">
+       <string>Don't put anything here.</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>100</y>
+     <width>161</width>
+     <height>18</height>
+    </rect>
    </property>
-   <property name="sortingEnabled">
-    <bool>false</bool>
+   <property name="text">
+    <string>(Use &quot;oo&quot; for infinity)</string>
    </property>
-   <property name="wordWrap">
-    <bool>false</bool>
-   </property>
-   <property name="cornerButtonEnabled">
-    <bool>true</bool>
-   </property>
-   <property name="rowCount">
-    <number>10</number>
-   </property>
-   <property name="columnCount">
-    <number>2</number>
-   </property>
-   <attribute name="horizontalHeaderVisible">
-    <bool>false</bool>
-   </attribute>
-   <attribute name="horizontalHeaderMinimumSectionSize">
-    <number>30</number>
-   </attribute>
-   <attribute name="horizontalHeaderDefaultSectionSize">
-    <number>217</number>
-   </attribute>
-   <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-    <bool>true</bool>
-   </attribute>
-   <attribute name="horizontalHeaderStretchLastSection">
-    <bool>true</bool>
-   </attribute>
-   <attribute name="verticalHeaderVisible">
-    <bool>true</bool>
-   </attribute>
-   <row/>
-   <row/>
-   <row/>
-   <row/>
-   <row/>
-   <row/>
-   <row/>
-   <row/>
-   <row/>
-   <row/>
-   <column/>
-   <column/>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>330</y>
+     <x>20</x>
+     <y>130</y>
      <width>176</width>
      <height>59</height>
     </rect>
@@ -128,9 +119,47 @@
     </item>
    </layout>
   </widget>
+  <widget class="QWidget" name="verticalLayoutWidget_2">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>130</y>
+     <width>151</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_2">
+    <item>
+     <widget class="QRadioButton" name="doDiff">
+      <property name="text">
+       <string>Differential</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="doIntegrate">
+      <property name="text">
+       <string>Integral</string>
+      </property>
+      <property name="checked">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <tabstops>
+  <tabstop>var</tabstop>
+  <tabstop>doDiff</tabstop>
+  <tabstop>doIntegrate</tabstop>
+  <tabstop>addMainEquation</tabstop>
+  <tabstop>addCurVar</tabstop>
   <tabstop>buttonBox</tabstop>
+  <tabstop>_spare</tabstop>
  </tabstops>
  <resources/>
  <connections>
