--- a/main.ui
+++ b/main.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>681</width>
+    <width>766</width>
     <height>716</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>681</width>
+      <width>762</width>
       <height>661</height>
      </rect>
     </property>
@@ -273,35 +273,52 @@
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
-          <widget class="QLineEdit" name="varSetter">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>400</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>200000</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="sizeIncrement">
-            <size>
-             <width>0</width>
-             <height>30</height>
-            </size>
-           </property>
-           <property name="placeholderText">
-            <string>Variable Value</string>
-           </property>
-          </widget>
+          <layout class="QHBoxLayout" name="horizontalLayout">
+           <item>
+            <widget class="QLineEdit" name="varSetter">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>400</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>200000</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="sizeIncrement">
+              <size>
+               <width>0</width>
+               <height>30</height>
+              </size>
+             </property>
+             <property name="placeholderText">
+              <string>Variable Value</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="resetVarButton">
+             <property name="maximumSize">
+              <size>
+               <width>39</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Reset</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
          <item>
           <widget class="QLabel" name="varPng">
@@ -356,8 +373,8 @@
         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="placeholderText">
         <string>Variable Info</string>
@@ -388,7 +405,7 @@ p, li { white-space: pre-wrap; }
           <rect>
            <x>-1</x>
            <y>-5</y>
-           <width>671</width>
+           <width>761</width>
            <height>201</height>
           </rect>
          </property>
@@ -452,7 +469,7 @@ p, li { white-space: pre-wrap; }
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>671</width>
+           <width>761</width>
            <height>201</height>
           </rect>
          </property>
@@ -472,8 +489,8 @@ p, li { white-space: pre-wrap; }
           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="placeholderText">
           <string>No Equation Provided</string>
@@ -492,7 +509,7 @@ p, li { white-space: pre-wrap; }
           <rect>
            <x>0</x>
            <y>20</y>
-           <width>671</width>
+           <width>761</width>
            <height>181</height>
           </rect>
          </property>
@@ -533,8 +550,8 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>681</width>
-     <height>30</height>
+     <width>766</width>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -546,11 +563,13 @@ p, li { white-space: pre-wrap; }
       <string>Copy to Clipboard...</string>
      </property>
      <addaction name="copySolution"/>
+     <addaction name="copyEquation"/>
      <addaction name="copyCurVar"/>
      <addaction name="separator"/>
      <addaction name="copyLatex"/>
      <addaction name="copyMathML"/>
      <addaction name="copyMathmatica"/>
+     <addaction name="separator"/>
     </widget>
     <widget class="QMenu" name="menuExport_As">
      <property name="title">
@@ -580,22 +599,20 @@ p, li { white-space: pre-wrap; }
     <addaction name="doEval"/>
     <addaction name="implicitMult"/>
     <addaction name="separator"/>
+    <addaction name="useFixString"/>
     <addaction name="interpretAsLatex"/>
+    <addaction name="interpretAsPython"/>
    </widget>
    <widget class="QMenu" name="menuTools">
     <property name="title">
      <string>Tools</string>
     </property>
-    <addaction name="plotButton"/>
     <addaction name="limitButton"/>
+    <addaction name="getIntDiff"/>
+    <addaction name="separator"/>
+    <addaction name="plotButton"/>
     <addaction name="makePiecewise"/>
-   </widget>
-   <widget class="QMenu" name="menuMath">
-    <property name="title">
-     <string>Math</string>
-    </property>
-    <addaction name="getIntegralButton"/>
-    <addaction name="getDiffButton"/>
+    <addaction name="getContinuous"/>
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
@@ -612,7 +629,6 @@ p, li { white-space: pre-wrap; }
    <addaction name="menuView"/>
    <addaction name="menuOptions"/>
    <addaction name="menuTools"/>
-   <addaction name="menuMath"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="save">
@@ -683,12 +699,12 @@ p, li { white-space: pre-wrap; }
     <string>Remember variable names after they've been deleted</string>
    </property>
   </action>
-  <action name="getIntegralButton">
+  <action name="getIntDiff">
    <property name="text">
-    <string>Get the Integral</string>
+    <string>Get Differential/Integral...</string>
    </property>
   </action>
-  <action name="getDiffButton">
+  <action name="getDiff">
    <property name="text">
     <string>Get the Differential</string>
    </property>
@@ -832,6 +848,41 @@ p, li { white-space: pre-wrap; }
     <string>Make Piecewise</string>
    </property>
   </action>
+  <action name="useFixString">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Use Manual String Parsing</string>
+   </property>
+  </action>
+  <action name="getContinuous">
+   <property name="text">
+    <string>Is Continuous At...</string>
+   </property>
+  </action>
+  <action name="interpretAsPython">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Input is Python</string>
+   </property>
+  </action>
+  <action name="copyEquation">
+   <property name="text">
+    <string>Input Equation</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+C</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -846,7 +897,6 @@ p, li { white-space: pre-wrap; }
   <tabstop>answerBox</tabstop>
   <tabstop>varList</tabstop>
   <tabstop>relation</tabstop>
-  <tabstop>varSetter</tabstop>
   <tabstop>setRelationButton</tabstop>
   <tabstop>newRelationButton</tabstop>
   <tabstop>varInfoBox</tabstop>
